--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+
+    <link rel="stylesheet" href="/SRC/CSS/global.css" />
+    <link rel="stylesheet" href="/SRC/CSS/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header><i class="bi bi-film"></i>MyMovies</header>
+  </body>
 </html>
