desenvolvimento do header no arquivo html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     <link rel="stylesheet" href="/SRC/CSS/style.css" />
   </head>
   <body>
-    <header><i class="bi bi-film"></i>MyMovies</header>
+    <header>
+      <p><i class="bi bi-film"></i>MyMovies</p>
+
+      <div class="input-wrapper">
+        <label for="movie-name">Nome do Filme:</label>
+        <input type="text" id="movie-name" />
+      </div>
+
+      <div class="input-wrapper">
+        <label for="movie-year">Ano do Filme:</label>
+        <input type="text" id="movie-year" />
+      </div>
+
+      <button type="button"><i class="bi bi-search"></i></button>
+    </header>
   </body>
 </html>
