--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <input type="number" id="movie-year" placeholder="Ano do Filme" />
         </div>
 
-        <button type="button">
+        <button type="button" id="search-button">
           <i class="bi bi-search"></i>
         </button>
       </section>
