Atualizações de estilo no header e no conteúdo principal do app

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
       <p id="logo-name"><i class="bi bi-film" id="logo"></i>My Movies</p>
 
-      <section class="search-container">
+      <div class="search-container">
         <div class="input-wrapper">
           <label for="movie-name">Nome</label>
           <input type="text" id="movie-name" placeholder="Nome do Filme" />
@@ -48,10 +48,12 @@
         <button type="button" id="search-button">
           <i class="bi bi-search"></i>
         </button>
-      </section>
+      </div>
     </header>
 
     <!-- Conteúdo principal -->
-    <main></main>
+    <main>
+      <h1 class="main-title">Comece agora a sua lista de filmes!</h1>
+    </main>
   </body>
 </html>
