desenvolvimento de modal de filme

--- a/index.html
+++ b/index.html
@@ -54,6 +54,43 @@
     <!-- Conteúdo principal -->
     <main>
       <h1 class="main-title">Comece agora a sua lista de filmes!</h1>
+
+      <section class="movie-list"></section>
+
+      <article class="modal-overlay">
+        <section class="modal-background"></section>
+
+        <section class="modal-container">
+          <h2>Título do filme</h2>
+
+          <section class="modal-body">
+            <img
+              src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
+              alt=""
+            />
+
+            <div class="movie-info">
+              <p class="movie-plot">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam,
+                voluptate dolores cupiditate rerum facere sunt qui, cumque
+                temporibus maxime alias voluptatibus esse adipisci itaque
+                assumenda quidem iure quae quasi. Culpa!
+              </p>
+
+              <p class="movie-cast">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam,
+                voluptate dolores cupiditate rerum facere sunt qui, cumque
+              </p>
+
+              <p class="movie-genre">Lorem ipsum dolor sit amet</p>
+            </div>
+          </section>
+
+          <section class="modal-footer">
+            <button type="button" id="add-film-button"></button>
+          </section>
+        </section>
+      </article>
     </main>
   </body>
 </html>
