botão de adicionar filme desenvolvido

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           </section>
 
           <section class="modal-footer">
-            <button type="button" id="add-film-button"></button>
+            <button type="button" id="add-film-button">
+              Adicionar à Lista
+            </button>
           </section>
         </section>
       </article>
