desenvolvimento de estilização do modal de filmes

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
         <section class="modal-background"></section>
 
         <section class="modal-container">
-          <h2>Título do filme</h2>
+          <h2 class="movie-title">Iron Man</h2>
 
           <section class="modal-body">
             <img
+              class="movie-poster"
               src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
               alt=""
             />
@@ -78,16 +79,20 @@
               </p>
 
               <p class="movie-cast">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam,
-                voluptate dolores cupiditate rerum facere sunt qui, cumque
+                <span class="text-highlighting">Elenco</span>: Lorem, ipsum
+                dolor sit amet consectetur adipisicing elit. Nam, voluptate
+                dolores cupiditate rerum facere sunt qui, cumque
               </p>
 
-              <p class="movie-genre">Lorem ipsum dolor sit amet</p>
+              <p class="movie-genre">
+                <span class="text-highlighting">Gênero</span>: Lorem ipsum dolor
+                sit amet
+              </p>
             </div>
           </section>
 
           <section class="modal-footer">
-            <button type="button" id="add-film-button">
+            <button type="button" id="add-movie-button">
               Adicionar à Lista
             </button>
           </section>
