desenvolvimento do rodapé do app e ajustes de arquivos javascript

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section class="movie-list"></section>
 
-      <article class="modal-overlay">
+      <article class="modal-overlay" style="display: none;">
         <section class="modal-background"></section>
 
         <section class="modal-container">
@@ -99,5 +99,10 @@
         </section>
       </article>
     </main>
+
+    <!-- Rodapé -->
+    <footer>
+      <p>Desenvolvido por Breno com 🖤</p>
+    </footer>
   </body>
 </html>
