desenvolvimento da inteligência do modal de filme com javascript e css, e inclusão das tags script e noscript

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section class="movie-list"></section>
 
-      <article class="modal-overlay" style="display: none;">
+      <article class="modal-overlay overlay">
         <section class="modal-background"></section>
 
         <section class="modal-container">
@@ -104,5 +104,8 @@
     <footer>
       <p>Desenvolvido por Breno com 🖤</p>
     </footer>
+
+    <noscript>Por favor, ative o Javascript no seu navegador</noscript>
+    <script src="SRC/JS/modal.js"></script>
   </body>
 </html>
