--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     </footer>
 
     <noscript>Por favor, ative o Javascript no seu navegador</noscript>
+    <script src="SRC/JS/script.js"></script>
     <script src="SRC/JS/modal.js"></script>
   </body>
 </html>
