utilização do pacote notie-master para tratar erros durante a pesquisa de filmes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
     <link rel="stylesheet" href="/SRC/CSS/global.css" />
     <link rel="stylesheet" href="/SRC/CSS/style.css" />
+
+    <link rel="stylesheet" href="SRC/notie-master/dist/notie.css" />
   </head>
   <body>
     <!-- Menu de pesquisa -->
@@ -114,5 +116,6 @@
     <noscript>Por favor, ative o Javascript no seu navegador</noscript>
     <script src="SRC/JS/script.js"></script>
     <script src="SRC/JS/modal.js"></script>
+    <script src="SRC/notie-master/dist/notie.js"></script>
   </body>
 </html>
