função showMovieModal adicionada no arquivo script.js no lugar da função createModal()

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
       <article class="modal-overlay overlay">
         <section class="modal-background"></section>
 
-        <section class="modal-container">
-        
-        </section>
+        <section class="modal-container"></section>
       </article>
     </main>
 
@@ -80,7 +78,7 @@
     </footer>
 
     <noscript>Por favor, ative o Javascript no seu navegador</noscript>
-    
+
     <script src="SRC/JS/script.js"></script>
     <script src="SRC/JS/modal.js"></script>
     <script src="SRC/notie-master/dist/notie.js"></script>
