desenvolvimento das funções updateUI() e addToList() no arquivo script.js

--- a/index.html
+++ b/index.html
@@ -70,79 +70,9 @@
             alt="Poster do filme."
           />
 
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
-        </article>
-
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button"><i class="bi bi-trash"></i> Remover</button>
+          <button class="remove-movie-button" type="button">
+            <i class="bi bi-trash"></i> Remover
+          </button>
         </article>
       </section>
 
