--- a/index.html
+++ b/index.html
@@ -63,18 +63,7 @@
     <main>
       <h1 class="main-title">Comece agora a sua lista de filmes!</h1>
 
-      <section class="movie-list">
-        <article>
-          <img
-            src="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_SX300.jpg"
-            alt="Poster do filme."
-          />
-
-          <button class="remove-movie-button" type="button">
-            <i class="bi bi-trash"></i> Remover
-          </button>
-        </article>
-      </section>
+      <section class="movie-list"></section>
 
       <article class="modal-overlay overlay">
         <section class="modal-background"></section>
