--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
     <link rel="stylesheet" href="/SRC/CSS/style.css" />
 
     <link rel="stylesheet" href="SRC/notie-master/dist/notie.css" />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-1024px.css"
+      media="(max-width: 1024px)"
+    />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-900px.css"
+      media="(max-width: 900px)"
+    />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-767px.css"
+      media="(max-width: 767px)"
+    />
   </head>
   <body>
     <!-- Menu de pesquisa -->
