desenvolvimento de media querie 480px e ajuste de media querie 767px para 768px

--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-767px.css"
-      media="(max-width: 767px)"
+      href="/SRC/CSS/media-768px.css"
+      media="(max-width: 768px)"
+    />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-480px.css"
+      media="(max-width: 480px)"
     />
   </head>
   <body>
