--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
       href="/SRC/CSS/media-480px.css"
       media="(max-width: 480px)"
     />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-320px.css"
+      media="(max-width: 320px)"
+    />
   </head>
   <body>
     <!-- Menu de pesquisa -->
