desenvolvimento de media querie 1000px landscape

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
       href="/SRC/CSS/media-320px.css"
       media="(max-width: 320px)"
     />
+
+    <link
+      rel="stylesheet"
+      href="/SRC/CSS/media-1000px-landscape.css"
+      media="(max-width: 1000px) and (orientation: landscape)"
+    />
   </head>
   <body>
     <!-- Menu de pesquisa -->
