--- a/index.html
+++ b/index.html
@@ -29,47 +29,47 @@
       rel="stylesheet"
     />
 
-    <link rel="preload" href="/SRC/CSS/global.css" as="style" />
-    <link rel="preload" href="/SRC/CSS/style.css" as="style" />
+    <link rel="preload" href="SRC/CSS/global.css" as="style" />
+    <link rel="preload" href="SRC/CSS/style.css" as="style" />
 
-    <link rel="stylesheet" href="/SRC/CSS/global.css" />
-    <link rel="stylesheet" href="/SRC/CSS/style.css" />
+    <link rel="stylesheet" href="SRC/CSS/global.css" />
+    <link rel="stylesheet" href="SRC/CSS/style.css" />
 
     <link rel="stylesheet" href="SRC/notie-master/dist/notie.css" />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-1024px.css"
+      href="SRC/CSS/media-1024px.css"
       media="(max-width: 1024px)"
     />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-900px.css"
+      href="SRC/CSS/media-900px.css"
       media="(max-width: 900px)"
     />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-768px.css"
+      href="SRC/CSS/media-768px.css"
       media="(max-width: 768px)"
     />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-480px.css"
+      href="SRC/CSS/media-480px.css"
       media="(max-width: 480px)"
     />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-320px.css"
+      href="SRC/CSS/media-320px.css"
       media="(max-width: 320px)"
     />
 
     <link
       rel="stylesheet"
-      href="/SRC/CSS/media-1000px-landscape.css"
+      href="SRC/CSS/media-1000px-landscape.css"
       media="(max-width: 1000px) and (orientation: landscape)"
     />
   </head>
